# csvMongoDB

./: .gitignore  CMakeLists.txt  README
libs/csvcollection/: CMakeLists.txt
libs/csvcollection/inc/: collection.h  csvcollection.h
libs/csvcollection/src/: collection.cpp  csvcollection.cpp
libs/csvcollection/test/: CMakeLists.txt  csvcollectiontest.cpp
res/test/: application.properties  test.csv
src/: main.cpp
